# gerenTool

./: Cargo.toml  README.md  build.rs  滚动截图.md
.trae/specs/extract-screenshot-feature/: checklist.md  spec.md  tasks.md
src/: app.rs  db.rs  main.rs  menu.rs  pages.rs  startup.rs  tray.rs
src/screenshot/: mod.rs
src/screenshot/feature/: mod.rs
src/screenshot/feature/canvas/: drag.rs  draw.rs  hit_test.rs  mod.rs  mosaic.rs  render.rs  shape.rs  text_input.rs
src/screenshot/feature/canvas/interaction/: drag.rs  hover.rs  mod.rs
src/screenshot/feature/screenshot/: draw.rs  mod.rs  pin.rs  scroll_capture.rs  state.rs  toolbar.rs
src/screenshot/feature/screenshot/capture/: actions.rs  capture_impl.rs  mod.rs
src/screenshot/hotkey/: mod.rs  parser.rs
src/screenshot/model/: device.rs  state.rs
src/screenshot/platform/: mod.rs  windows.rs
