[package]
name = "settings_app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34.1", features = ["default"] }
egui = "0.34.1"
egui-phosphor = { version = "0.12", features = ["regular"] }
image = { version = "0.25.9", features = ["png", "jpeg", "gif", "bmp", "webp", "tiff"], default-features = false }
arboard = "3.6.1"
xcap = "0.9.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
global-hotkey = "0.8.0"
raw-window-handle = "0.6.2"
tiny-skia = "0.12.0"
imageproc = "0.26.1"
ab_glyph = "0.2.32"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Time",
] }
